# prediction

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
programs/betting/: Cargo.toml
programs/betting/src/: contexts.rs  errors.rs  lib.rs
programs/betting/src/instructions/: bet.rs  claim.rs  mod.rs  start_round.rs
programs/vesting/: Cargo.toml
programs/vesting/src/: contexts.rs  states.rs
programs/vesting/src/instructions/: stop_round.rs
src/: betting-exports.ts  index.ts  vesting-exports.ts
tests/: betting.spec.ts
